
   * Fully consistent API (defined and correct return values)

   * Complete GLUT independence (internal character sets)

   * Basic building support for biological polymers & small molecules
     with and w/o hydrogens

Current Bugs to Fix

   * superposition system fails with degenerate sets (planer systems, etc).
     sometimes it just fails period

Changes up to 0.85

   * PyMOL no longer wraps output lines by default "set wrap_output=78"
     to get previous behavior

   * relocated binary shared objects from modules into the modules/pymol
     tree

   * data files now separated from the modules directory into a parallel data
     tree in $PYMOL_PATH

   * added ability to build PyMOL using Python distutils
   
   * revamped the PyMOL launch process.  It should now be possible
     to launch pymol simply with an "import pymol" statement, provided
     that the modules are in the Python search path

   * fixed get_dihedral to use current state index

   * revamped smooth command and added documentation

   * added some nasty code to handle quotes and apostrophes in atom selections
     so that nucleic acids and sugars with apostrophes will work right while
     you can also still explicitly use apostrophes or quotes

   * added "safe" option to zoom command in order to provide a mode
     which will guarantee against clipping

Changes up to 0.84

   * updated SPHEROID command for use with trajectories

   * Can now read AMBER topology, coordinate, trajectory, and restart files

   * PyMOL now transforms 4-character atom names appropriately by default.
     Thus, 3HG2 in PDB file becomes an atom named "HG23"
     If you don't like this, "set pdb_literal_names=1".

   * PyMOL now preserves stereo field on MOL-files to better enable
     shuttling of 2D structures through PyMOL...

   * fixed bug with dumping of dot surfaces...

   * fixed bug reading element identifer from PDB files

   * fixed bug with alternate conformations

Changes up to 0.83
